 * More work on eprint control page. Not complete, but much progress.
 * Moved around the interface code to make better use of inheritance.

2006-07-14 cjg

 * More development on new user interface. The interface is no longer
    staff or not staff, that's a property of the screen or tab.

2006-07-19 cjg

 * Fixed template - search was hardlinked to flag.ecs
 * Added $session->render_tabs plus a javascript function to support it.

2006-07-21 cjg

 * Removed workflow->process as it's not used any more.
 * Added Home as a screen in the interface. Currently home is the deposit
    screen, but it will probably become a jump-off screen to take you to
    the first tool you can use. The current code will probably become
    "Deposit".
 * Deposit tool now shows all owned eprints in any dataset (will be 
    filter-able later)
 * Removed user-page layout stuff from phrases.
 * Renamed the action phrases to have a logical set of ids for names and
    help text.
 * Tweaked workflow demo to use an eprintid on my machine and handle the
    changes to workflow.pm
 * Shortend the names of the workflow stages
 * Improved MetaField::Set to handle null defaults in the input renderer.
 * Many more changes to the user Interface modules, including addin a 
    new view of eprints for non-owner, non-editors. Making the views all
    subclass EPrint::View. Making EPrint::View make a redirect to a 
    sensible view. Adding a wrapper for all logged in pages, and a weapper
    for pages dealing with a single eprint record.
 
2006-06-24 cjg

 * Added javascript to template which causes the scroll bar to always be
    shown.
 * Added stubs for all user tools.
 * Added sketch of tool defintion code to Screen.pm
 * Added Status tool.
 * Added colour codes to the deposit view.
 * Added a new default workflow for eprints - shorter and nearer.
 * Added phrases to make workflow look neater.

2006-06-25 cjg

 * Merged MetaField::Basic into MetaField. Removed MetaField::Basic.