@@ -2005,56 +2005,3 @@ if (/Konqueror|Safari|KHTML/.test(navigator.userAgent)) {
   }
 }
 
-function ep_gt( a, b ) { return a>b; }
-function ep_lt( a, b ) { return a<b; }
-
-
-
-
-
-
-
-
-window.ep_showTab = function( baseid, tabid )
-{
-
-	panels = document.getElementById( baseid+"_panels" );
-	for( i=0; ep_lt(i,panels.childNodes.length); i++ )
-	{
-		child = panels.childNodes[i];
-		child.style.display = "none";
-	}
-
-	tabs = document.getElementById( baseid+"_tabs" );
-	for( i=0; ep_lt(i,tabs.childNodes.length); i++ )
-	{
-		child = tabs.childNodes[i];
-		if( child.className == "ep_tab_selected" )
-		{
-			child.className = "ep_tab";
-		}
-	}
-
-	panel = document.getElementById( baseid+"_panel_"+tabid );
-	panel.style.display = "block";
-
-	tab = document.getElementById( baseid+"_tab_"+tabid );
-	tab.style.font_size = "30px";
-	tab.className = "ep_tab_selected";
-	for( i=0; ep_lt(i,tab.childNodes.length); i++ )
-	{
-		child = tab.childNodes[i];
-		if( child.nodeName == "A" )
-		{
-			child.blur();
-		}
-	}
-
-	if( tabid == "history" )
-	{
-		return true;
-	}
-
-	return false;
-};
-
