@@ -142,7 +142,7 @@ sub render_messages
 		my $div = $self->{session}->make_element( "div", class=>"ep_".$message->{type}, id=>$id );
 #		my $title_div = $self->{session}->make_element( "div", class=>"ep_".$message->{type}."_title" );
 #		my $close_a =  $self->{session}->make_element( "a", onclick=>'document.getElementById( "'.$id.'" ).style.display = "none"; return false;', href=>'#' );
-#		my $close = $self->{session}->make_element( "img", src=>"/images/style/close.gif", class=>"ep_close_icon js_only" );
+#		my $close = $self->{session}->make_element( "img", src=>"/images/style/close.gif", class=>"ep_close_icon only_js" );
 #		$close_a->appendChild( $close );
 		my $content_div = $self->{session}->make_element( "div", class=>"ep_".$message->{type}."_content" );
 #		$title_div->appendChild( $close_a );
